# SC_Solver

./: CMakeLists.txt  README.md  data1_4times_points.csv  data1_double_points.csv  data2_4times_points.csv  data2_double_points.csv
Curve_Fitting/: CMakeLists.txt
Curve_Fitting/datasets/: 2_a_dataset_1.csv  plot.sh
Curve_Fitting/include/: converters.h  linear_algerbra_ops.h  read_csv.h
Curve_Fitting/src/: .solvers.cpp.swp  converters.cpp  linear_algerbra_ops.cpp  main.cpp  multlivariable_linear_regression.cpp  polynomial_regression.cpp  read_csv.cpp
Gauss_Elimination/: CMakeLists.txt
Gauss_Elimination/include/: gauss_elimination.h  matrix.h  read_csv.h  vector.h
Gauss_Elimination/src/: gauss_elimination.cpp  main.cpp  matrix.cpp  read_csv.cpp  vector.cpp
Interpolation/: CMakeLists.txt
Interpolation/.ipynb_checkpoints/: plot-checkpoint.ipynb
Interpolation/include/: Cubicspline_interpolation.h  cubicspline.h  matrix.h  newtonspolynomial.h  read_csv.h  vector1.h
Interpolation/output/: data1_4times_pointsNP.csv  data1_cubicspline_4times_pointsNP.csv  data1_double_pointsNP.csv  data2_4times_pointsNP.csv  data2_cubicspline_4times_pointsNP.csv  data2_double_pointsNP.csv
Interpolation/output/coefficients/: 3_dataset_1_cubicspline_coefficients.csv  3_dataset_1_newtonpolynomial_coefficients.csv  3_dataset_2_newtonpolynomial_coefficients.csv  3_dataset_2cubicspline_coefficients.csv
Interpolation/src/: Cubicspline_interpolation.cpp  cubicspline.tpp  main.cpp  matrix.cpp  matrix.tpp  newtonspolynomial.cpp  newtonspolynomial.tpp  read_csv.cpp  vector.tpp
